<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.food.view.user.profile.ProfileDetailView
                android:id="@+id/profile_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:showName="false"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/padding_small"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/padding_small"/>

            <View
                android:id="@+id/base_view_alignment"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/padding_small"
                app:layout_constraintStart_toEndOf="@id/tv_about_me"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/text_black"
                android:fontFamily="@font/helvetica_now_regular"
                app:layout_constraintTop_toTopOf="@id/et_name"
                app:layout_constraintStart_toStartOf="@id/guideline_start"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/background_rounded_gray_transparent_60"
                android:layout_marginTop="@dimen/padding_small"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                app:layout_constraintStart_toEndOf="@id/base_view_alignment"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/profile_view"
                />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/text_black"
                android:fontFamily="@font/helvetica_now_regular"
                app:layout_constraintTop_toTopOf="@id/et_email"
                app:layout_constraintStart_toStartOf="@id/guideline_start"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/background_rounded_gray_transparent_60"
                android:inputType="textEmailSubject"
                android:enabled="false"
                android:layout_marginTop="@dimen/padding_very_small"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                app:layout_constraintStart_toEndOf="@id/base_view_alignment"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/hidden_view_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_birthdate, et_birthdate, et_phone, tv_phone"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/text_black"
                android:fontFamily="@font/helvetica_now_regular"
                app:layout_constraintTop_toTopOf="@id/et_phone"
                app:layout_constraintBottom_toBottomOf="@id/et_phone"
                app:layout_constraintStart_toStartOf="@id/guideline_start"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/background_rounded_gray_transparent_60"
                android:inputType="phone"
                android:layout_marginTop="@dimen/padding_very_small"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingEnd="@dimen/padding_very_small"
                app:layout_constraintStart_toEndOf="@id/base_view_alignment"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                />

            <TextView
                android:id="@+id/tv_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                android:fontFamily="@font/helvetica_now_regular"
                android:textColor="@color/text_black"
                app:layout_constraintTop_toTopOf="@id/et_birthdate"
                app:layout_constraintBottom_toBottomOf="@id/et_birthdate"
                app:layout_constraintStart_toStartOf="@id/guideline_start"/>

            <EditText
                android:id="@+id/et_birthdate"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/background_rounded_gray_transparent_60"
                android:inputType="time"
                android:layout_marginTop="@dimen/padding_very_small"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingEnd="@dimen/padding_very_small"
                app:layout_constraintStart_toEndOf="@id/base_view_alignment"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/et_phone"
                />

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:fontFamily="@font/helvetica_now_regular"
                android:textColor="@color/text_black"
                app:layout_constraintTop_toTopOf="@id/et_about_me"
                app:layout_constraintStart_toStartOf="@id/guideline_start"/>

            <EditText
                android:id="@+id/et_about_me"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_about_me_height"
                android:background="@drawable/background_rounded_gray_transparent_60"
                android:inputType="textImeMultiLine"
                android:layout_marginTop="@dimen/padding_very_small"
                android:paddingTop="@dimen/padding_small"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:gravity="top|start"
                app:layout_constraintStart_toEndOf="@id/base_view_alignment"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/et_birthdate"
                />

            <com.food.view.button.CustomButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/padding_small"
                app:text="@string/save"
                app:canAnimate="true"
                app:layout_constraintTop_toBottomOf="@id/et_about_me"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end" />

            <com.food.view.button.ButtonWithArrow
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_big"
                app:layout_constraintTop_toBottomOf="@id/btn_save"
                app:text="@string/logout"
                app:textColor="@color/text_black"
                app:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_now_regular"
                android:textColor="@color/text_gray"
                android:layout_marginTop="@dimen/padding_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_logout"
                tools:text="v1.2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>